--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,45 @@
-# bin
-bin/
+# Binaries for programs and plugins
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+
+# Test binary, built with `go test -c`
+*.test
+
+# E2E test
+e2e/screenshots/
+e2e/downloads/
+
+
+# Output of the go coverage tool, specifically when used with LiteIDE
+*.out
+
+# Dependency directories (remove the comment below to include it)
+# vendor/
+node_modules/
+
+# IDE
+.vscode/
+.idea/
+
+# Logs
+logs
+*.log
+
+# OS
+.DS_Store
+
+# Temporary files
+*.tmp
+tmp/
+temp/
+
+# Build system
+build/
 dist/
+bin/
 
 # env
 .env
